      You can configure certain block types you don't want restored to prevent players exploiting regen for diamond ores.
      Block types to not restore are configured in block_ignore in the worlds txt file data/worlds/worldname.txt
    - Added a block deletion function to remove specified blocks when a town block becomes unclaimed.
      This is useful for removing Lockette/Deadbolt signs on doors and chests.
      Block types to remove are configured in unclaim_delete in the worlds txt file data/worlds/worldname.txt
    - Removed the commands '/town add+' and '/town kick+'. Use '/town add' and '/town kick'.
    - Removed + commands from '/town assistant [.add/remove]'.
    - Fixed when players are added to the default town they are unable to use '/town leave'.
    - Town data files should now be correctly deleted (moved to the deleted folder) upon removal.
    - Added a max_tax_amount and max_tax_percent to the config for towns. Defaults to 1000 and 25% respetively.
      Which one is used depends on how the town is taxing; flat rate or by percentage.
    - Fixed Town and Nation tags size limit.
    - Titles and surnames can now contain spaces.
    - Fixed default Bukkit Permissions to deny instead of allow.
    - Fixed last timer for deleting old residents.
    - Added a new setting 'regen_delay'.
      This setting is in seconds. It will allow players to break protected blocks in the wild and town, even if they dont have permission.
      The blocks will drop no loot and will regenerate after the specified time.
      Defaults to 0 (disabled).
    - Added Nation bank caps and moved the settings to the economy section.
    - Moved daily tax settings to the economy section of the config.
    - Tidy of economy settings (WARNING - be sure to check the values after upgrading).
    - Added a broadcast if a Nation is disbanded due to a town deletion.
    - Fixed '/xxx claim auto' commands for town and resident.