@@ -371,7 +371,7 @@ msg_err_not_registered_1: '&c%s is not registered'
 msg_err_invalid_name: '&c%s is an invalid name.'
 msg_err_already_res: '&c%s already belongs to a town.'
 msg_err_already_nation: '&cTarget town already belongs to a nation.'
-msg_err_invalid_property: '&cInvalid %s property.'
+msg_err_invalid_property: '&cInvalid ''%s'' property.'
 msg_err_not_supported: '&cNot yet supported.'
 msg_err_invalid_input: '&cInvalid input. Use %s'
 msg_err_negative: '&cInput cannot be negative.'
